infrastructure/minio/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-api
  namespace: minio
spec:
  parentRefs:
  - name: crulabs-gateway
    namespace: gateway-system
  hostnames:
  - "minio.crulabs.intern"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: minio
      port: 9000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console-https
  namespace: minio
spec:
  parentRefs:
  - name: crulabs-gateway
    sectionName: websecure
    namespace: gateway-system
  hostnames:
  - "minio-console.crulabs.intern"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: minio-console
      port: 9001
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console-http
  namespace: minio
spec:
  parentRefs:
  - name: crulabs-gateway
    sectionName: web
    namespace: gateway-system
  hostnames:
  - "minio-console.crulabs.intern"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
